# ImageProcessor

./: CMakeLists.txt  README.md  build_release.sh  build_sanitizer.sh  image_processor.cpp  pr_readme.md
filters/: base_filters.cpp  base_filters.h  blur_filter.cpp  blur_filter.h  crop_filter.cpp  crop_filter.h  crystalize_filter.cpp  crystalize_filter.h  edgedetection_filter.cpp  edgedetection_filter.h  filters_applier.cpp  filters_applier.h  filters_list.h  grayscale_filter.cpp  grayscale_filter.h  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h
io/: bmptools.cpp  bmptools.h  image.cpp  image.h
utils/: headers.h  help_functions.cpp  help_functions.h  parser.cpp  parser.h
